--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,11 @@
 *.dylib
 
 # Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+server
 
 # Debug files
 *.dSYM/
+
+# Backup files
+*~
+.#*
